使用 Colaboratory 建立

--- a/colab_automl_dev.ipynb
+++ b/colab_automl_dev.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3/BQMjLovSnns4wg8+tG9",
+      "authorship_tag": "ABX9TyNolYISZMjU6VRo5walUzaJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/pocession/automl/blob/main/colab_automl_dev.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/pocession/automl/blob/streamlit_lunch/colab_automl_dev.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -5177,7 +5177,7 @@
         "# ngrok setting\n",
         "\n",
         "from pyngrok import ngrok\n",
-        "!ngrok authtoken 2JTJW7DspzUbI85Izh5RAehZtBE_5oNCNcbbNvKcmtxrfEp3j"
+        "!ngrok authtoken #your token"
       ],
       "metadata": {
         "id": "T20wIM4SO_tx"
